# cpp.demo.static-embeded-lua

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.MD  lua_code.diff  make_includes.py
lua_dirty/: CMakeLists.txt  encode_string.c  encode_string.h  lstrlib.c  lstrlib.c.diff  make_includes.py
src/: encode_string.c  encode_string.h  lstrlib.c
tests/: CMakeLists.txt  build_posix.sh  luautils.cpp  luautils.hpp  main.cpp  print_table.lua  settings.lua  settings.lua.1
